--- a/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
+++ b/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
@@ -636,6 +636,17 @@ input:checked + label .dascy__idTwo-description{
       width: 9.2%;
     }
 }
+.hover-message {
+  position: absolute;
+  top: 300px; /* Adjust as needed */
+  left: 320px; /* Adjust as needed */
+  background-color: #000;
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
 
 #arr3-x{
   margin-left: 90px;
@@ -650,6 +661,17 @@ input:checked + label .dascy__idTwo-description{
 #nbr1{
   margin-top: 55px;
   margin-bottom: 0px;
+}
+.hover-message2 {
+  position: absolute;
+  top: 295px; /* Adjust as needed */
+  left: 410px; /* Adjust as needed */
+  background-color: #000;
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 10;
 }
 .graph3_line-1{
     width: 0;
@@ -869,7 +891,17 @@ input:checked + label .dascy__idTwo-description{
 #c3:checked ~ .dascy__idTwo-card .arrows3 {
   display: block;
 }
-
+.hover-message3 {
+  position: absolute;
+  top: 340px; /* Adjust as needed */
+  left: 530px; /* Adjust as needed */
+  background-color: #000;
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
 .graph4_line-1{
     width: 2px; 
     height: 0;
@@ -1172,7 +1204,10 @@ input:checked + label .dascy__idTwo-description{
 #c5:checked ~ .dascy__idTwo-card .arrows5 {
   display: block;
 }
-/*2 10 14 18*/
+/*1 5 9 13 17*/
+.graph5_line-1{
+   
+}
 .graph5_line-2{
     width: 2px; 
     height: 0; 
@@ -1216,6 +1251,164 @@ input:checked + label .dascy__idTwo-description{
       opacity: 1; 
   }
 }
+.graph5_line-3{
+    width: 0;
+    height: 2px; 
+    background-color: blue;
+    position: relative;
+    animation: stretchG5Line3 2s linear forwards; 
+    animation-delay: 4s;
+    margin-left: 130px;
+    margin-top: -162px;
+    margin-bottom: 160px;
+  }
+  
+  @keyframes stretchG5Line3 {
+    0% {
+      width: 0;
+    }
+    50% {
+      width: 4.65%; 
+    }
+    100% {
+      width: 9.3%;
+    }
+}
+.graph5_line-4{
+    width: 2px; 
+    height: 0; 
+    background-color: blue; 
+    position: absolute;
+    top: 0;
+    margin-left: 174px;
+    margin-top: 336px;
+    margin-bottom: 0px;
+    animation: stretchG5Line4 2s linear forwards; 
+    animation-delay: 6s;
+  }
+  
+  .graph5_line-4::after {
+    content: '';
+    position: absolute;
+    top: 86px;
+    left: 50%;
+    transform: translateX(-50%) rotate(90deg); 
+    width: 6px; 
+    height: 6px; 
+    background-color: blue; 
+    clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+    opacity: 0; 
+    animation: showArrow54 0.5s forwards;
+    animation-delay: 8s;
+  }
+@keyframes stretchG5Line4 {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 87px; 
+    }
+}
+@keyframes showArrow54 {
+  0% {
+      opacity: 0; 
+  }
+  100% {
+      opacity: 1; 
+  }
+}
+.graph5_line-5{}
+.graph5_line-6{
+    width: 2px; 
+    height: 0;
+    background-color: blue;
+    position: absolute;
+    bottom: 0;
+    left: 68;
+    animation: stretchG5Line6 2s linear forwards; 
+    animation-delay: 10s;
+    margin-left: 199px;
+    margin-bottom: 180px;
+  }
+  
+ @keyframes stretchG5Line6 {
+    0% {
+      height: 0;
+    }
+    50% {
+      height: 7.3%; 
+    }
+    100% {
+      height: 14.6%;
+    }
+}
+.graph5_line-7{
+    width: 0;
+    height: 2px; 
+    background-color: blue;
+    position: relative;
+    animation: stretchG5Line7 2s linear forwards; 
+    animation-delay: 12s;
+    margin-left: 199px;
+    margin-top: -162px;
+    margin-bottom: 160px;
+  }
+  
+  @keyframes stretchG5Line7 {
+    0% {
+      width: 0;
+    }
+    50% {
+      width: 4.65%; 
+    }
+    100% {
+      width: 4.3%;
+    }
+}
+.graph5_line-8{
+    width: 2px; 
+    height: 0; 
+    background-color: blue; 
+    position: absolute;
+    top: 0;
+    margin-left: 220px;
+    margin-top: 336px;
+    margin-bottom: 0px;
+    animation: stretchG5Line8 2s linear forwards; 
+    animation-delay: 14s;
+  }
+  
+  .graph5_line-8::after {
+    content: '';
+    position: absolute;
+    top: 86px;
+    left: 50%;
+    transform: translateX(-50%) rotate(90deg); 
+    width: 6px; 
+    height: 6px; 
+    background-color: blue; 
+    clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+    opacity: 0; 
+    animation: showArrow58 0.5s forwards;
+    animation-delay: 16s;
+  }
+@keyframes stretchG5Line8 {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 87px; 
+    }
+}
+@keyframes showArrow58 {
+  0% {
+      opacity: 0; 
+  }
+  100% {
+      opacity: 1; 
+  }
+}
+.graph5_line-9{}
 .graph5_line-10{
    width: 2px; 
     height: 0; 
@@ -1259,6 +1452,55 @@ input:checked + label .dascy__idTwo-description{
       opacity: 1; 
   }
 }
+.graph5_line-11{
+    width: 0;
+    height: 2px; 
+    background-color: blue;
+    position: relative;
+    animation: stretchG5Line11 2s linear forwards; 
+    animation-delay: 20s;
+    margin-left: 268px;
+    margin-top: -162px;
+    margin-bottom: 160px;
+  }
+  
+  @keyframes stretchG5Line11 {
+    0% {
+      width: 0;
+    }
+    50% {
+      width: 4.65%; 
+    }
+    100% {
+      width: 4.9%;
+    }
+}
+.graph5_line-12{
+    width: 2px; 
+    height: 0;
+    background-color: blue;
+    position: absolute;
+    top: 0;
+    left: 68px; 
+    animation: stretchG5Line12 2s linear forwards; 
+    animation-delay: 22s;
+    margin-top: 336px;
+    margin-left: 685px;
+    margin-bottom: -300px;
+  }
+  
+  @keyframes stretchG5Line12 {
+    0% {
+      height: 0;
+    }
+    50% {
+      height: 7.3%; 
+    }
+    100% {
+      height: 15.3%;
+    }
+}
+.graph5_line-13{}
 .graph5_line-14{
     width: 2px; 
     height: 0; 
@@ -1302,6 +1544,73 @@ input:checked + label .dascy__idTwo-description{
       opacity: 1; 
   }
 }
+.graph5_line-15{
+    width: 0;
+    height: 2px; 
+    background-color: blue;
+    position: relative;
+    animation: stretchG5Line15 2s linear forwards; 
+    animation-delay: 28s;
+    margin-left: 316px;
+    margin-top: -162px;
+    margin-bottom: 160px;
+  }
+  
+  @keyframes stretchG5Line15 {
+    0% {
+      width: 0;
+    }
+    50% {
+      width: 4.65%; 
+    }
+    100% {
+      width: 9.7%;
+    }
+}
+.graph5_line-16{
+    width: 2px; 
+    height: 0; 
+    background-color: blue; 
+    position: absolute;
+    top: 0;
+    margin-left: 363px;
+    margin-top: 336px;
+    margin-bottom: 0px;
+    animation: stretchG5Line16 2s linear forwards; 
+    animation-delay: 30s;
+  }
+  
+  .graph5_line-16::after {
+    content: '';
+    position: absolute;
+    top: 86px;
+    left: 50%;
+    transform: translateX(-50%) rotate(90deg); 
+    width: 6px; 
+    height: 6px; 
+    background-color: blue; 
+    clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+    opacity: 0; 
+    animation: showArrow516 0.5s forwards;
+    animation-delay: 32s;
+  }
+@keyframes stretchG5Line16 {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 87px; 
+    }
+}
+@keyframes showArrow516 {
+  0% {
+      opacity: 0; 
+  }
+  100% {
+      opacity: 1; 
+  }
+}
+.graph5_line-17{}
 .graph5_line-18{
    width: 2px; 
     height: 0; 
@@ -1479,7 +1788,7 @@ input:checked + label .dascy__idTwo-description{
   }
 }
 .graph6_line-4{
-     width: 0;
+    width: 0;
     height: 2px; 
     background-color: blue;
     position: relative;
@@ -2177,233 +2486,4 @@ input:checked + label .dascy__idTwo-description{
     }
   }
 
-.encoding-2{
-    background-color: #F0D0FF;
-}
-.encoding-2_graph{
-    width: 700px;
-    border-radius: .75rem;
-    background-size: cover;
-    margin: 0 240px;
-    margin-top: 40px;
-    margin-bottom: 30px;
-    padding: 20px 0;
-    border-radius: 2rem;
-    display: flex;
-    align-items: flex-start;
-    box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
-    background-color: #F9F8FD;
-}
-#arr-x{
-    margin-top: 180px;
-    margin-bottom: 130px;
-}
 
-#nmbr{
-    margin-left: -352px;
-    margin-top: 270px;
-}
-#arr3-x{
-    height: 1px;
-}
-#arr3-x{
-    margin-top: 180px;
-    margin-bottom: 130px;
-}
-#arr5-x{
-    margin-top: 180px;
-    margin-bottom: 130px;
-}
-#arr6-x{
-    margin-top: 180px;
-    margin-bottom: 130px;
-}
-#Line{
-  margin-top: 179px;
-  margin-left: -340px;
-  animation: stretchLine11 2s linear forwards;
-}
-@keyframes stretchLine11 {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 6%; 
-  }
-  100% {
-    width: 12.5%;
-  }
-}
-#Line1{
-  margin-left: -298px;
-  margin-bottom: -240px;
-}
-#Line2{
-  margin-left: -297px;
-  margin-top: -40px;
-  animation: stretchLine12 2s linear forwards;
-  animation-delay: 4s;
-}
-@keyframes stretchLine12 {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 3%; 
-  }
-  100% {
-    width: 13%;
-  }
-}
-#Line3{
-  animation: stretchLine13 2s linear forwards; 
-  margin-left: -252px;
-  margin-top: 75px;
-  animation-delay: 8s;
-}
-
-@keyframes stretchLine13 {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 3%;  
-  }
-  100% {
-    width: 13%;
-  }
-}
-#Line4{
-  margin-top: 808px;
-  margin-left: 420px;
-  margin-bottom: -300px;
-  animation: stretchLine14 2s linear forwards; 
-  animation-delay: 6s;
-}
-
-@keyframes stretchLine14 {
-  0% {
-    height: 0;
-  }
-  50% {
-    height: 6%; 
-  }
-  100% {
-    height: 12.9%;
-  }
-}
-#Line7{
-  margin-left: 465px;
-  margin-bottom: -279px;
-  animation: stretchLine17 2s linear forwards; 
-  animation-delay: 10s;
-}
-
-@keyframes stretchLine17 {
-  0% {
-    height: 0;
-  }
-  50% {
-    height: 3%; 
-  }
-  100% {
-    height: 6.42%;
-  }
-}
-#Line5{
-  animation: stretchLine15 2s linear forwards; 
-  margin-left: -208px;
-  margin-top: -40px;
-  animation-delay: 12s;
-}
-
-@keyframes stretchLine15 {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 13.5%; 
-  }
-  100% {
-    width: 27%;
-  }
-}
-#Line10{
-  animation: stretchLine100 2s linear forwards; 
-  margin-left: -116px;
-  margin-top: -40px;
-  animation-delay: 16s;
-}
-
-@keyframes stretchLine100 {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 3%; 
-  }
-  100% {
-    width: 14.8%;
-  }
-}
-#Line9{
-  margin-top: 807px;
-  margin-left: 605px;
-  animation: stretchLine19 2s linear forwards;  
-  animation-delay: 18s;
-}
-
-@keyframes stretchLine19 {
-  0% {
-    height: 0;
-  }
-  50% {
-    height: 3%; 
-  }
-  100% {
-    height: 6.7%;
-  }
-}
-#Line8{
-  animation: stretchLine18 2s linear forwards; 
-  margin-left: -67px;
-  margin-top: -2px;
- 
-  animation-delay: 20s;
-}
-
-@keyframes stretchLine18 {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 7%;  
-  }
-  100% {
-    width: 14%;
-  }
-}
-#Line6{
-  width: 0;
-  height: 2px; 
-  background-color: blue;
-  position: relative;
-  transform: rotate(-90deg);
-  animation: stretchLine16 2s linear forwards; 
-  margin-left: 340px;
-  margin-top: -2px;
-  animation-delay: 12s;
-  /**/
-}
-
-@keyframes stretchLine16 {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 3%; 
-  }
-  100% {
-    width: 6.5%;
-  }
-}
